# git-changes-rs

./: Cargo.toml  Dockerfile  README.md  build_script.py
src/: main.rs
