[package]
name = "git-changes-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.2.0", features = ["derive"] }
git2 = "0.16.1"
regex = "1.9.1"
tokio = { version = "1.32", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde_json = "1.0"
anyhow = "1.0"